sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/Fulcrum_Competitor__c.object-meta.xml
<CustomObject>
    <description
  >VAR competitors tracked by MarginArc for margin intelligence</description>
    <label>MarginArc Competitor</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MarginArc Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>