sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >Brief description of this competitor&apos;s positioning</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>