sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/How_To_Win__c.field-meta.xml
<CustomField>
    <fullName>How_To_Win__c</fullName>
    <description
  >Strategy recommendations for winning against this competitor</description>
    <label>How To Win</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>