sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/Margin_Aggression__c.field-meta.xml
<CustomField>
    <fullName>Margin_Aggression__c</fullName>
    <description
  >How aggressively this competitor prices (-5 very aggressive, +3 value player)</description>
    <inlineHelpText
  >-5 = extremely price aggressive, 0 = neutral, +3 = value player</inlineHelpText>
    <label>Margin Aggression</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>