sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/Price_Aggression__c.field-meta.xml
<CustomField>
    <fullName>Price_Aggression__c</fullName>
    <description
  >How aggressively this competitor undercuts on price</description>
    <label>Price Aggression</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Low</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Very Aggressive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>