sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/Primary_OEMs__c.field-meta.xml
<CustomField>
    <fullName>Primary_OEMs__c</fullName>
    <description>OEMs this competitor is strongest with</description>
    <label>Primary OEMs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>