sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/Primary_Strength__c.field-meta.xml
<CustomField>
    <fullName>Primary_Strength__c</fullName>
    <description
  >Main competitive strength (e.g., &quot;Volume + Execution&quot;, &quot;Price&quot;)</description>
    <label>Primary Strength</label>
    <length>100</length>
    <type>Text</type>
</CustomField>