sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/Services_Capability__c.field-meta.xml
<CustomField>
    <fullName>Services_Capability__c</fullName>
    <description
  >Strength of this competitor&apos;s professional services</description>
    <label>Services Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Weak</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3 - Moderate</label>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Strong</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>