sfdc/force-app/main/default/objects/Fulcrum_Competitor__c/fields/Typical_Discount__c.field-meta.xml
<CustomField>
    <fullName>Typical_Discount__c</fullName>
    <description>How much this competitor typically undercuts by</description>
    <label>Typical Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>